[add] qr generate with base64 & download

--- a/qr-generator/src/main/resources/static/custom.css
+++ b/qr-generator/src/main/resources/static/custom.css
@@ -28,3 +28,19 @@
     100% { opacity: 1; }
 }
 
+/* HTMX 요청 진행 중 */
+.htmx-request.spinner-indicator ~ #qr-preview {
+    display: none;
+}
+
+.spinner-indicator {
+    display: none;
+}
+
+.htmx-request .spinner-indicator {
+    display: inline;
+}
+
+.htmx-request.spinner-indicator {
+    display: inline;
+}
