--- a/tawilwind-jte-template/input.css
+++ b/tawilwind-jte-template/input.css
@@ -1,2 +1,3 @@
-@import "tailwindcss";
-@source "../../jte/**";
+@import "tailwindcss" source(none);
+@source "./src/main/jte/**";
+@plugin "daisyui";
